apps/network/crowdsec/agent-daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: crowdsec-agent
  labels:
    k8s-app: crowdsec
    type: agent
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: crowdsec
      type: agent
  template:
    metadata:
      labels:
        k8s-app: crowdsec
        type: agent
        version: v1
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
      containers:
      - name: crowdsec-agent
        image: "ghcr.io/crowdsecurity/crowdsec:v1.5.5"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 150m
            memory: 100Mi
        
        ports:
          - name: metrics
            containerPort: 6060
            protocol: TCP

        securityContext:
          allowPrivilegeEscalation: false
          privileged: false

        volumeMounts:          
          - name: acquis-config-volume
            mountPath: /etc/crowdsec/acquis.yaml
            subPath: acquis.yaml
          - name: varlog
            mountPath: /var/log
            readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: acquis-config-volume
        configMap:
          name: acquis-configmap
      - name: varlog
        hostPath:
          path: /var/log
