apps/network/crowdsec/lapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: &appname crowdsec-lapi
spec:
  rules:
  - host: &local_uri crowdsec-lapi.k8s.maxwlang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crowdsec-service
            port:
              number: 8080
  tls:
  - hosts:
    - *local_uri
    secretName: *appname
